--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=7.2",
-		"codeigniter4/framework": "^4"
+		"codeigniter4/framework": "^4",
+		"endroid/qr-code": "^3.9",
+		"chillerlan/php-qrcode": "^4.2",
+		"simplesoftwareio/simple-qrcode": "^4.1"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "^1.9@dev",
